add icon asset & put text data in @string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">KakaoGalleryProject</string>
+    <string name="app_name">갤러리 과제</string>
+    <string name="sasha">sasha</string>
 </resources>
